# voxel-engine

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  update.sh
.github/workflows/: cmake-single-platform.yml
include/: camera.h  camera.hpp  shader.hpp  shader_s.h
src/: camera.cpp  main.cpp  shader.cpp
